fix: revert dropdown positioning to left alignment
Reverted dropdown positioning from right to left:
- Changed cartDropdown and userDropdown position from `right: 0` to `left: 0`
- Updated arrow indicator from `right: 15px` to `left: 15px`

This positioning works better with the current navbar layout structure.

--- a/src/components/shared/Navbar/Navbar.module.scss
+++ b/src/components/shared/Navbar/Navbar.module.scss
@@ -218,7 +218,7 @@
 .cartDropdown, .userDropdown {
   position: absolute;
   top: 45px;
-  right: 0;
+  left: 0;
   background: white;
   box-shadow: $shadow-md;
   border-radius: $border-radius-md;
@@ -233,7 +233,7 @@
     content: "";
     position: absolute;
     top: -10px;
-    right: 15px;
+    left: 15px;
     border-width: 5px;
     border-style: solid;
     border-color: transparent transparent white transparent;
